--- a/scss/ui.scss
+++ b/scss/ui.scss
@@ -178,11 +178,12 @@ body {
 .fade-top,
 .fade-bottom {
     position: fixed;
-    // bottom: 100vh;
     right: 0;
     width: 70%;
     z-index: 100;
     height: 6rem;
+    background-repeat: repeat-x;
+    background-size: contain;
 
     &.full-span {
         width: 100%;
@@ -196,8 +197,6 @@ body {
 .fade-top {
     top: 0;
     background-image: url("/images/general/fade-top.png");
-    background-repeat: repeat-x;
-    background-size: contain;
 
     @include breakpoint(flexgrid-lg) {
         height: 8rem;
@@ -207,7 +206,7 @@ body {
 .fade-bottom {
     bottom: 0vh;
     height: 2rem;
-    background-image: linear-gradient(to top, $bgColor 60%, rgba(0, 0, 0, 0));
+    background-image: url("/images/general/fade-bottom");
 }
 
 // ---------------------
@@ -255,7 +254,7 @@ body {
     visibility: visible;
     opacity: 1;
     clip-path: circle(100% at 50% 50%);
-    transition: clip-path 1s;
+    transition: clip-path 0.6s;
 
     &.hidden {
         opacity: 0;
@@ -481,15 +480,19 @@ footer {
 
 .scrolling-content {
     min-height: 60vh;
-    padding: 10rem 3rem 40vh 0;
+    padding: 10rem 3rem 30vh 0;
     margin: 8;
 
     @include breakpoint(desktop) {
-        padding: 10rem 1rem 40vh 0;
+        padding: 10rem 1rem 30vh 0;
     }
 
     @include breakpoint(flexgrid-lg) {
-        padding: 7.75rem 1rem 40vh 1rem;
+        padding: 7.75rem 1rem 30vh 1rem;
+    }
+
+    @include breakpoint(flexgrid-md) {
+        padding: 7.75rem 1rem 10vh 1rem;
     }
 }
 
